i say jmp you say how high

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             overflow-y: auto;
         }
     </style>
+<!--     <script src="shell/codemirror.js"></script> -->
+<!--     <link rel="stylesheet" href="shell/codemirror.css"> -->
+<!-- <script src="shell/dojologo.js"></script> -->
 </head>
 <body style="background:black;color:white;">
   <h1>Dojo Shell 🐚</h1>
