--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Turtle Graphics Monad</title>
+    <title> Paperlands |> Shell</title>
+    <link rel="icon" href="logo.svg">
     <style>
         #editor, #canvas {
             border: 1px solid black;
