Hide Go collect fw 200

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <h1>Dojo Shell 🐚</h1>
    <div id="runenv">
     <textarea id="editor"></textarea>
-    <button id="runButton" onclick="runCode()" >Go</button>
+    <!-- <button id="runButton" onclick="runCode()" >Go</button> -->
     </div>
     <canvas id="canvas" width="1000" height="1000"></canvas>
     <div id="output"></div>
