--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         #canvas {
             width: 100%;
             height: 100%;
+            display: block;
             background-color: black;
             z-index: 1;
         }
@@ -58,7 +59,7 @@
     <textarea id="editor"></textarea>
     <!-- <button id="runButton" onclick="runCode()" >Go</button> -->
     </div>
-    <canvas id="canvas" width="1000" height="1000"></canvas>
+    <canvas id="canvas"></canvas>
     <div id="output"></div>
     <script src="turtle.js"></script>
 </body>
